# transformer-chess

./: README.md  main.py  pyproject.toml  reduce_time.py  rl_environment.py
app/: README.md  api.py  config.py  game.py  logger.py  main.py  models.py  pyproject.toml
app/static/: index.html  style.css
training/: README.md  main.py  pyproject.toml  reduce_time.py  utils.py
